# character-wiki

./: .gitignore  README.md  WORKFLOW.md  export_characters_map.py  main_wiki.py  migrate_chapters_to_db.py  pyproject.toml  wiki_remaster.py
.github/instructions/: usage.instructions.md
config/: settings.py  settings.yaml
crawler/: storage.py
db/: database.py  pipeline.db-shm  pipeline.db-wal
models/: schemas.py
plans/: character-salient-span-extraction.md  implement-pipeline.md  initial.md  wiki_remaster copy.md  wiki_remaster.md
tests/: test_db.py  test_extractor.py  test_merger.py  test_schemas.py  test_wiki_remaster_main.py
wiki/: extractor.py  merger.py  orchestrator.py  validator.py
