[project]
name = "story-with-wiki"
version = "0.1.0"
description = "Story crawl + wiki extraction pipeline"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings[yaml]>=2.3.0",
    "loguru>=0.7.2",
    "tenacity>=8.3.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "crawler", "models", "db", "wiki"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]
